# cargo-workspace-plugin

./: Cargo.toml  build.rs
src/: main.rs  utils.rs
src/commands/: create.rs  list.rs
