[package]
name = "cargo-workspace-plugin"
description = "Cargo plugin for managing workspaces."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
climb = "2.0.5"
dialoguer = { version = "0.10.4", default-features = false }
owo-colors = "3.5.0"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
toml_edit = { version = "0.19.9", features = ["serde"] }

[build-dependencies]
built = "0.6.0"
